--- a/src/component/field-checkbox/index.hbs
+++ b/src/component/field-checkbox/index.hbs
@@ -1,6 +1,6 @@
 <div class='field field_checkbox'>
 	<button onclick="checkBox.toggle(this);
-	{{action}}('{{name}}', this.hasAttribute('active'));" type="button" class="field_wrapper">
+	{{action}}('{{name}}', this.hasAttribute('active'));" type="button" class="field_wrapper validation" name="{{name}}">
 		<span class="field_icon"></span>
 		<span class="field_label field_label_checkbox">{{label}}</span>
 	</button>
