--- a/src/component/field-select/index.hbs
+++ b/src/component/field-select/index.hbs
@@ -2,7 +2,7 @@
 	<span class="field_label">{{label}}</span>
 
 	<div class="field_container">
-		<button type="button" onclick="fieldSelect.toggle(this)" class="field_select">
+		<button type="button" onclick="fieldSelect.toggle(this)" class="field_select validation" name="{{name}}">
 			<span class="field_value field_value_placeholder">{{placeholder}}</span>
 			<span class="field_icon"></span>
 		</button>
