--- a/src/component/field/index.hbs
+++ b/src/component/field/index.hbs
@@ -1,5 +1,5 @@
 <div class="field">
 	<label for="{{name}}" class="field_label">{{label}}</label>
-	<input oninput="{{action}}(this.name, this.value)" type="{{type}}" class="field_input" name='{{name}}'
+	<input oninput="{{action}}(this.name, this.value)" type="{{type}}" class="field_input validation" name='{{name}}'
 		placeholder="{{placeholder}}">
 </div>
