--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -35,6 +35,18 @@ font-size: 12px;
     &:active{
         opacity: 0.3;
     }
+
+    &_disabled{
+      opacity: 0.5;
+      cursor: default;
+
+      &:hover,
+      &:active{
+        opacity: 0.5;
+        cursor: default;
+
+      }
+    }
 }
 
 .alert{
@@ -58,5 +70,13 @@ font-size: 12px;
         color:idx.color(blue);
       }
 
+      &_disabled{
+        display: none;
+      }
+}
 
+.validation{
+&_action{
+  border-color:idx.color(red) !important
+}
 }
