--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -4,10 +4,12 @@
 }}
 
 <main>
-	{{>heading title="Index" info=data.test}}
+    Home page
 </main>
 
 {{!
-    Цей код містить лише те, що буде виводитись в <body>
+Цей код містить лише те, що буде виводитись в
+
+<body>
     Адже наш layout/default.hbs має вже структуру HTML
-}}
+    }}
