--- a/src/layout/default/index.scss
+++ b/src/layout/default/index.scss
@@ -48,4 +48,10 @@ body {
 		font-size: 24px;
 		color: s.color(dark);
 	}
+
+	&_subtitle{
+		font-size: 14px;
+		color: s.color(gray);
+		line-height: 1.5em;
+	}
 }
